@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
   <setting id="version" default="" visible="false"/>
- 	<category label="30500">
-        <setting id="area" label="30510" type="enum" default="0" lvalues="30511|30512|30516|30513|30514" />
-        <setting id="enable.subtitles" label="30503" type="bool" default="false" />
-        <setting id="enable.localsubtitles" label="30508" type="bool" default="false" />
-        <setting id="enable.areaitem" label="30515" type="bool" default="false" />
-        <setting id="use.simpleareaitem" label="30517" type="bool" default="false" />
-        <setting id="disable.kids" label="30505" type="bool" default="true" />
-        <setting id="disable.kids.subtitles" label="30509" type="bool" default="true" />
-        <setting id="disable.kids.seasons" label="30518" type="bool" default="true" />
-        <setting id="inputstream" label="30521" type="labelenum" default="adaptive" values="adaptive|ffmpegdirect" />
-        <setting label="30504" type="action" action="RunScript($CWD/resources/lib/clearfavorites.py)" />
-	</category>
+  <category label="30500">
+    <setting id="area" label="30510" type="enum" default="0" lvalues="30511|30512|30516|30513|30514" />
+    <setting id="enable.subtitles" label="30503" type="bool" default="false" />
+    <setting id="enable.localsubtitles" label="30508" type="bool" default="false" />
+    <setting id="enable.areaitem" label="30515" type="bool" default="false" />
+    <setting id="use.simpleareaitem" label="30517" type="bool" default="false" />
+    <setting id="disable.kids" label="30505" type="bool" default="true" />
+    <setting id="disable.kids.subtitles" label="30509" type="bool" default="true" />
+    <setting id="disable.kids.seasons" label="30518" type="bool" default="true" />
+    <setting id="inputstream" label="30521" type="labelenum" default="adaptive" values="adaptive|ffmpegdirect" />
+    <setting label="30504" type="action" action="RunScript($CWD/resources/lib/clearfavorites.py)" />
+  </category>
   <category label="30550">
     <setting id="iptv.channels_uri" default="plugin://plugin.video.drnu?iptv=channels" visible="false"/>
     <setting id="iptv.epg_uri" default="plugin://plugin.video.drnu?iptv=epg" visible="false"/>
@@ -29,10 +29,12 @@
     <setting id="iptv.schedule.lookahead" label="30561" type="select" values="3|6|12|24|48|72|96|120|144|168" enable="eq(-9,true)" default="6" />
     <setting id="iptv.schedule.referesh" label="30562" enable="false" type="text" default="Set using IPTV Manager settings" />
   </category>
-	<category label="30501">
-		<setting label="30531" type="action" action="RunPlugin(plugin://plugin.video.drnu/?re-cache=1)" />
-		<setting id="recache.expiration" label="30532" type="number" default="24" />
-		<setting id="recache.cleanup" label="30534" type="number" default="7" />
-		<setting id="recache.enabled" label="30535" type="bool" default="true" />
-	</category>
+  <category label="30501">
+    <setting label="30531" type="action" action="RunPlugin(plugin://plugin.video.drnu/?re-cache=1)" />
+    <setting id="recache.expiration" label="30532" type="number" default="24" />
+    <setting id="recache.cleanup" label="30534" type="number" default="7" />
+    <setting id="recache.enabled" label="30535" type="bool" default="true" />
+    <setting id="recache.cronjob" label="30536" type="bool" default="false"/>
+    <setting id="recache.cronexpression" label="30537" type="text" default="0 3 * * *"/>
+  </category>
 </settings>
